fix:remove unuse style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,7 @@
  line-height: 1.5;
  font-weight: 400;
 
- color-scheme: light dark;
+ /*color-scheme: light dark;*/
  color: rgba(255, 255, 255, 0.87);
  background-color: #192a32;
 
@@ -60,7 +60,7 @@ button:focus,
 button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
 }
-
+/*
 @media (prefers-color-scheme: light) {
  :root {
   color: #213547;
@@ -72,7 +72,7 @@ button:focus-visible {
  button {
   background-color: #f9f9f9;
  }
-}
+}*/
 .x-color {
  color: #32c3c0;
 }
